apps/saldo/base/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: saldo-dep
  labels:
    app: saldo

spec:
  replicas: 1
  selector:
    matchLabels:
      app: saldo
  template:
    metadata:
      labels:
        app: saldo
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001

      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: saldo-pvc
      containers:
        - name: saldo
          image: IMAGES/APP
          imagePullPolicy: Always

          volumeMounts:
            - name: db
              mountPath: /app/data
