apps/saldo/base/service.yml
apiVersion: v1
kind: Service

metadata:
  name: saldo-svc

spec:
  type: ClusterIP
  selector:
    app: saldo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
